--- a/common_eureka/pom.xml
+++ b/common_eureka/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>commom_eureka</artifactId>
+    <artifactId>common_eureka</artifactId>
 
     <dependencies>
         <dependency>
