--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>usian_content_feign</module>
         <module>usian_content_web</module>
         <module>usian_portal_web</module>
+        <module>common_redis</module>
+        <module>common_eureka</module>
     </modules>
 
     <!--Spring Boot 父工程-->
