--- a/usian_item_service/src/main/resources/application.yml
+++ b/usian_item_service/src/main/resources/application.yml
@@ -9,7 +9,24 @@ spring:
     username: root
     password: 123
     type: com.alibaba.druid.pool.DruidDataSource
+  redis:
+    cluster:
+      nodes:
+        - 192.168.232.135:7001
+        - 192.168.232.135:7002
+        - 192.168.232.135:7003
+        - 192.168.232.135:7004
+        - 192.168.232.135:7005
+        - 192.168.232.135:7006
+    jedis:
+      pool:
+        max-active: 20  #连接池最大连接数
+        max-idle: 10    #连接池中的最大空闲连接
+        min-idle: 5     #连接池中的最小空闲连接
 eureka:
   client:
     service-url:
       dafaultZone: http://127.0.0.1:8761/eureka/
+
+#配置缓存首页商品分类的 key
+PORTAL_CATRESULT_KEY: PORTAL_CATRESULT_KEY
