--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <module>usian_portal_web</module>
         <module>common_redis</module>
         <module>common_eureka</module>
+        <module>usian_search_service</module>
+        <module>usian_search_feign</module>
+        <module>usian_search_web</module>
     </modules>
 
     <!--Spring Boot 父工程-->
