--- a/usian_item_service/src/main/resources/application.yml
+++ b/usian_item_service/src/main/resources/application.yml
@@ -7,22 +7,27 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/usian?characterEncoding=UTF-8
     username: root
-    password: 123
+    password: root
     type: com.alibaba.druid.pool.DruidDataSource
   redis:
     cluster:
       nodes:
-        - 192.168.232.135:7001
-        - 192.168.232.135:7002
-        - 192.168.232.135:7003
-        - 192.168.232.135:7004
-        - 192.168.232.135:7005
-        - 192.168.232.135:7006
+        - 192.168.3.130:7001
+        - 192.168.3.130:7002
+        - 192.168.3.130:7003
+        - 192.168.3.130:7004
+        - 192.168.3.130:7005
+        - 192.168.3.130:7006
     jedis:
       pool:
         max-active: 20  #连接池最大连接数
         max-idle: 10    #连接池中的最大空闲连接
         min-idle: 5     #连接池中的最小空闲连接
+  rabbitmq:
+    host: 192.168.3.128
+    username: admin
+    password: 1111
+    virtual-host: /
 eureka:
   client:
     service-url:
