--- a/usian_item_service/src/main/resources/application.yml
+++ b/usian_item_service/src/main/resources/application.yml
@@ -35,3 +35,14 @@ eureka:
 
 #配置缓存首页商品分类的 key
 PORTAL_CATRESULT_KEY: PORTAL_CATRESULT_KEY
+
+#商品详情
+ITEM_INFO: ITEM_INFO
+BASE: BASE
+DESC: DESC
+PARAM: PARAM
+ITEM_INFO_EXPIRE: 86400
+
+SETNX_BASC_LOCK_KEY: SETNX_BASC_LOCK_KEY
+SETNX_DESC_LOCK_KEY: SETNX_DESC_LOCK_KEY
+SETNX_PARAM_LOCK_KEY: SETNX_PARAM_LOCK_KEY
