--- a/usian_order_feign/pom.xml
+++ b/usian_order_feign/pom.xml
@@ -9,30 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>usian_sso_web</artifactId>
+    <artifactId>usian_order_feign</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.usian</groupId>
-            <artifactId>usian_sso_feign</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--Spring Cloud OpenFeign Starter -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>com.usian</groupId>
-            <artifactId>common_utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.usian</groupId>
-            <artifactId>usian_cart_feign</artifactId>
+            <artifactId>common_pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
