--- a/usian_order_service/pom.xml
+++ b/usian_order_service/pom.xml
@@ -9,14 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>usian_sso_web</artifactId>
+    <artifactId>usian_order_service</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.usian</groupId>
-            <artifactId>usian_sso_feign</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -27,12 +22,17 @@
         </dependency>
         <dependency>
             <groupId>com.usian</groupId>
-            <artifactId>common_utils</artifactId>
+            <artifactId>common_mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.usian</groupId>
-            <artifactId>usian_cart_feign</artifactId>
+            <artifactId>common_redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.usian</groupId>
+            <artifactId>common_utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
