--- a/usian_order_service/src/main/resources/application.yml
+++ b/usian_order_service/src/main/resources/application.yml
@@ -13,3 +13,26 @@ spring:
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
+  redis:
+    cluster:
+      nodes:
+        - 192.168.3.130:7001
+        - 192.168.3.130:7002
+        - 192.168.3.130:7003
+        - 192.168.3.130:7004
+        - 192.168.3.130:7005
+        - 192.168.3.130:7006
+    jedis:
+      pool:
+        max-active: 20 #连接池最大连接数
+        max-idle: 10   #连接池中的最大空闲连接
+        min-idle: 5    #连接池中的最小空闲连接
+  rabbitmq:
+    host: 192.168.3.128
+    username: admin
+    password: 1111
+    port: 5672
+#订单
+ORDER_ID_KEY: ORDER_ID_KEY
+ORDER_ID_BEGIN: 100544
+ORDER_ITEM_ID_KEY: ORDER_ITEM_ID_KEY
