--- a/usian_item_service/src/main/resources/application.yml
+++ b/usian_item_service/src/main/resources/application.yml
@@ -28,6 +28,11 @@ spring:
     username: admin
     password: 1111
     virtual-host: /
+    listener:
+      direct:
+        acknowledge-mode: manual #设置三种订阅模式手动ack
+      simple:
+        acknowledge-mode: manual #设置work消息类型手动ack
 eureka:
   client:
     service-url:
